--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  # http: ^1.3.0
+  sqflite: ^2.4.1
+  path_provider: ^2.1.5
+  path: ^1.9.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -66,7 +70,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
-    - assets/data/recent_files.json
+    - assets/data/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
